--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,7 +83,6 @@
   /* updated from 14 to 13 */
   --font-12: 12px;
   /* End font sizes */
-
 }
 
 body {
@@ -425,8 +424,6 @@ nav.navbar {
   padding: 13px 41px;
   border: 0;
 }
-
-
 
 .location {
   cursor: pointer;
@@ -775,9 +772,11 @@ button.btn-link.active {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom,
-      var(--overlay-bg-dark),
-      var(--overlay-bg-darker));
+  background: linear-gradient(
+    to bottom,
+    var(--overlay-bg-dark),
+    var(--overlay-bg-darker)
+  );
   display: flex;
   align-items: flex-end;
   padding: 15px;
@@ -978,11 +977,11 @@ button.btn-link.active {
   transition: 0.3s;
 }
 
-.switch input:checked+.slider {
+.switch input:checked + .slider {
   background-color: var(--primary);
 }
 
-.switch input:checked+.slider:before {
+.switch input:checked + .slider:before {
   transform: translateX(16px);
 }
 
@@ -1118,7 +1117,7 @@ button.btn-link.active {
   align-items: center;
 }
 
-.breadcrumb-item+.breadcrumb-item::before {
+.breadcrumb-item + .breadcrumb-item::before {
   content: none !important;
 }
 
@@ -1780,7 +1779,6 @@ img.payment-icon-table {
 
   .custom-tab-header .nav-container {
     gap: 15px;
-
   }
 
   .resort-info {
@@ -2024,8 +2022,6 @@ img.payment-icon-table {
   color: #000;
   text-decoration: none !important;
 }
-
-
 
 /* Event Hover */
 .tab-btn.event-tab:hover {
@@ -2523,10 +2519,12 @@ img.payment-icon-table {
   left: -100%;
   height: 100%;
   width: 100%;
-  background: linear-gradient(90deg,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0.2) 50%,
-      rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
   animation: loading 1.5s infinite;
 }
 
@@ -2565,5 +2563,24 @@ html {
 
 .modal-overlay.jsx-c79782b35ce44790 {
   z-index: 10000 !important;
+}
 
+/* Coupon modal animation */
+.coupon-modal {
+  opacity: 0;
+  transform: translateY(-20px);
+  animation: fadeIn 0.3s forwards;
+}
+
+.coupon-modal.fade-out {
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: all 0.3s ease;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
