--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -772,9 +772,11 @@ button.btn-link.active {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom,
-      var(--overlay-bg-dark),
-      var(--overlay-bg-darker));
+  background: linear-gradient(
+    to bottom,
+    var(--overlay-bg-dark),
+    var(--overlay-bg-darker)
+  );
   display: flex;
   align-items: flex-end;
   padding: 15px;
@@ -975,11 +977,11 @@ button.btn-link.active {
   transition: 0.3s;
 }
 
-.switch input:checked+.slider {
+.switch input:checked + .slider {
   background-color: var(--primary);
 }
 
-.switch input:checked+.slider:before {
+.switch input:checked + .slider:before {
   transform: translateX(16px);
 }
 
@@ -1115,7 +1117,7 @@ button.btn-link.active {
   align-items: center;
 }
 
-.breadcrumb-item+.breadcrumb-item::before {
+.breadcrumb-item + .breadcrumb-item::before {
   content: none !important;
 }
 
@@ -2589,10 +2591,12 @@ img.payment-icon-table {
   left: -100%;
   height: 100%;
   width: 100%;
-  background: linear-gradient(90deg,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 0.2) 50%,
-      rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
   animation: loading 1.5s infinite;
 }
 
@@ -2664,4 +2668,13 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
