--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1307,27 +1307,27 @@ iframe {
 .custom-time-box {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   background-color: var(--time-box-bg);
   border: 1px solid var(--time-box-border);
   border-radius: 8px;
-  padding: 15px 10px;
-  height: 100px;
-  text-align: center;
-  gap: 20px;
+  padding: 4px 8px;
+  height: 70px;
+  text-align: left;
+  gap: 10px;
 }
 
 @media (max-width: 991px) {
   .custom-time-box {
-    padding: 10px 10px;
-    height: 80px;
-    gap: 10px;
+    padding: 6px 4px;
+    height: 60px;
+    gap: 8px;
   }
 }
 
 .custom-time-box .icon-text {
   display: flex;
-  align-items: center;
+  justify-content: flex-start;
   font-size: var(--font-13);
   color: var(--breadcrumb-separator);
 }
